# AIDomesticCoreAIJ

./: .bandit  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  ADMIN_PANEL_TEMPLATES.md  API_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_DISCORD_SETUP.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETE_SETUP_CHECKLIST.md  CONTRIBUTING.md  DELIVERABLES_INVENTORY.py  DEPLOYMENT_CONFIG.json  DEVELOPMENT_GUIDE.md  DOCUMENTATION_COMPLETE_INDEX.md  DOCUMENTATION_INDEX.md  Dockerfile  ENVIRONMENT_CONFIG.json  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_WEB_DASHBOARD.md  GITHUB_RESOURCES.json  GIT_GITHUB_GITLAB_COMPLETE.md  GIT_GITHUB_GITLAB_SETUP.md  GIT_GITHUB_GITLAB_SETUP_SUMMARY.md  GIT_SETUP_COMPLETE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INFRASTRUCTURE_SPECIFICATION.json  ISSUES_AND_PRS.json  MASTER_INDEX.md  MOBILE_APP_SETUP.md  MONITORING_CONFIG.json  Makefile  PERFORMANCE_BASELINE.json  PHASE_2_3_COMPLETE_INTEGRATION.md  (+38 more)
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/: README.md  SETUP_README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  coverage.yml  docker-build.yml  docs.yml  integration-tests.yml  maintenance.yml  performance-tests.yml  pr.yml  python-tests.yml  quality-checks.yml  quality.yml  release.yml  security-scanning.yml  tests.yml
.gitlab/: README.md
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
aiplatform/: cli_advanced.py  cross_ai_mesh.py  cross_ai_orchestration.py  edge_execution.py  llm_kernel_ide.py  mesh_ide.py  physical_ai_monitor.py  privacy_first_ide.py  quantum_code_optimizer.py  quantum_optimization_pipeline.py  web6_3d_ide.py  web6_semantic_graph.py
benchmarks/: baseline_results.json  run_benchmarks.py
config/: production.ini  production.yaml
data/: datasets_catalog.json  load_test_scenarios.json
data/samples/: datasets_metadata.json  quantum_samples.json  training_data.csv
data/test/: test_cases.json  test_results.json
docs/: CROSS_AI_MESH_GUIDE.md  DISTRIBUTED_MESH_IDE_GUIDE.md  MESH_IDE_EXAMPLES.md  OPENAPI_SPEC.json  OWASP_SECURITY_CHECKLIST_UPDATED.md  QUANTUM_CODE_OPTIMIZATION_GUIDE.md  STRATEGIC_FEATURES_GUIDE.md  WEB6_3D_IDE_GUIDE.md
examples/: complete_integration_workflow.py  mesh_complete_example.py  quantum_code_optimization_demo.py  web6_3d_ide_scenarios.py
k8s/: cronjobs.yaml  deployment.yaml
migrations/: 001_initial_schema.py
scripts/: deploy.sh  health_check.sh  init_db.sh  smoke_tests.sh
tests/: test_mesh_features.py  test_mesh_ide.py  test_quantum_code_optimizer.py  test_strategic_features.py  test_web6_3d_ide.py
tests/load_testing/: LOAD_TESTING_GUIDE_ENHANCED.md  ai_platform_load_test_enhanced.jmx  locustfile_enhanced.py
